smartresize in a separate file, no gap minor CSS fix

--- a/assets/css/lollum-page-builder.scss
+++ b/assets/css/lollum-page-builder.scss
@@ -110,6 +110,7 @@
 	.lpb-col-10,
 	.lpb-col-11,
 	.lpb-col-12 {
+		margin-bottom: 0;
 		padding-left: 0;
 		padding-right: 0;
 	}
